--- a/Frontend/login.html
+++ b/Frontend/login.html
@@ -9,5 +9,6 @@
         <input type="text">
         <label>Password:</label>
         <input type="password">
+        <input type="submit">
     </body>
 </html>
